--- a/CompleteExample.API/CompleteExample.API.csproj
+++ b/CompleteExample.API/CompleteExample.API.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
 
