--- a/CompleteExample.API/Properties/launchSettings.json
+++ b/CompleteExample.API/Properties/launchSettings.json
@@ -19,8 +19,8 @@
     },
     "CompleteExample.API": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "",
+      "launchBrowser": false,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
