--- a/CompleteExample.API/appsettings.Development.json
+++ b/CompleteExample.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "SchoolContext": "Data Source=LUCAS-PC\\SERVER;Database=CompleteExample;Trusted_Connection=True;"
   }
 }
